# jayrender

./: .gitignore  CMakeLists.txt
resources/: gouraud.frag  gouraud.vert  lighting.frag  phong.frag  shader.vert
resources/shaders/: gouraud.vert  phong.frag  phong_viewspace.frag  shader.vert
src/: main.cpp  main_old.cpp  shader.cpp  shader.h
src/camera/: camera.h
src/data/: cubes.h
src/data/light/: light.cpp  light.h
src/data/material/: material.cpp  material.h
src/resource_manager/: resource_manager.cpp  resource_manager.h
src/shader/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
